--- a/footer/footer.html
+++ b/footer/footer.html
@@ -10,11 +10,18 @@
     
     <!----- FONT AWESOME CSS FOR ICONS FONTS ------>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
-
+<style>
+    .footer
+   {
+      background-color:aliceblue;
+      color:black;
+   }
+   
+</style>
 
 </head>
 <body>
-     <footer class="footer--light">
+     <footer class="footer">
         <div class="container">
             <div class="row">
                   <div class="col" id="company">
